# device

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  build.rs  clippy.toml  justfile
.github/workflows/: ci.yaml
crates/device/: Cargo.toml
crates/device/src/: field.rs  lib.rs  parameter.rs  state.rs
crates/hypermedia/: Cargo.toml
crates/hypermedia/src/: filter.rs  text.rs
src/: alignment.rs  allocator.rs  analyzer.rs  app.rs  arguments.rs  array_string.rs  audio.rs  axis.rs  binary.rs  bindings.rs  blaster.rs  blend_mode.rs  bool_ext.rs  callback.rs  capture.rs  capture_thread.rs  codepoint.rs  color.rs  command.rs  command_entry.rs  command_ext.rs  commands.rs  composite_uniforms.rs  config.rs  controller.rs  counter.rs  emitter.rs  error.rs  event.rs  field.rs  filter.rs  filter_uniforms.rs  format.rs  fps.rs  function.rs  functions.rs  history.rs  hub.rs  image.rs  image_format.rs  (+62 more)
src/program/: all_night.rs  maria.rs  suplex.rs
src/subcommand/: bindings.rs  capture.rs  commands.rs  run.rs  shader.rs
src/voice/: add.rs  brown_noise.rs  constant.rs  cycle.rs  duty.rs  envelope.rs  gain.rs  gate.rs  pink_noise.rs  saw.rs  silence.rs  sine.rs  sum.rs  white_noise.rs
static/: last-resort.txt
templates/: composite.wgsl  filter.wgsl  shader.wgsl  vertex.wgsl
